<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Airmen</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <!-- Main menu activity -->
    <string name="begin">Begin</string>
    <string name="connect">Connect</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <!-- Server browser activity (LEGACY) -->
    <string name="server_browser">Server Browser</string>
    <!-- Lobby activities -->
    <string name="lobby">Lobby</string>
    <string name="owner">Owner</string>
    <string name="client">Client</string>
    <string name="standby">Standby</string>
    <!-- Review activity -->
    <string name="postgame">Postgame</string>
    <string name="game_over">Game Over</string>
    <string name="finish">Finish</string>
    <!-- Roles -->
    <string name="pilot">Pilot</string>
    <string name="bombardier">Bombardier</string>
    <string name="navigator">Navigator</string>
    <string name="signaller">Signaller</string>
    <string-array name="roles_array">
        <item>NO ROLE</item>
        <item>Pilot</item>
        <item>Bombardier</item>
        <item>Navigator</item>
        <item>Signaller</item>
    </string-array>
    <!-- Pilot Activity -->
    <string name="throttle">Throttle</string>
    <string name="airspeed">Airspeed</string>
    <string name="altimeter">Altimeter</string>
    <string name="altitude">Altitude</string>
    <string name="compass">Compass</string>
    <string name="bearing">Bearing</string>
    <string name="rotation">Rotation</string>
    <string name="engines">Engines</string>
    <string name="landing_gear">Landing Gear</string>
    <string name="roll">Roll</string>
    <string name="eject">Eject</string>
    <!-- Bombardier Activity -->
    <string name="bombsight">Bombsight</string>
    <string name="height">Height</string>
    <string name="distance">Distance</string>
    <string name="windspeed">Windspeed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="calculate">Calculate</string>
    <string name="distance_to_launch">Distance to Launch</string>
    <string name="arm">Arm</string>
    <string name="arming">
        Arming&#8230; <xliff:g id="countdown">%1$d</xliff:g>
    </string>
    <string name="disarm">Disarm</string>
    <string name="launch">Launch</string>
    <string name="turret">Turret</string>
    <!-- Navigator Activity -->
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="elevation">Elevation</string>
    <!-- Signaller Activity -->
    <string name="radar">Radar</string>
    <string name="radio">Radio</string>
    <!-- Miscellaneous UI -->
    <string name="port">Port</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <!-- Error messages -->
    <string name="no_group_formed">No Wifi-Direct Group</string>
    <string name="connection_error">Connection Error</string>
    <!-- LEGACY STRINGS -->
    <string name="fake_figure">000</string>
    <string name="placeholder">Placeholder</string>
</resources>
