<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/airspeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!-- Display -->
    <TextView
        android:id="@+id/airspeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fake_figure"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/label_airspeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/altimeter"/>
    <TextView
        android:id="@+id/altimeter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fake_figure"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/label_altimeter"
        app:layout_constraintStart_toEndOf="@id/airspeed"
        app:layout_constraintEnd_toStartOf="@id/compass"/>
    <TextView
        android:id="@+id/compass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fake_figure"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/label_compass"
        app:layout_constraintStart_toEndOf="@id/altimeter"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!-- Display Labels -->
    <TextView
        android:id="@+id/label_airspeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/airspeed"
        app:layout_constraintTop_toBottomOf="@id/airspeed"
        app:layout_constraintBottom_toTopOf="@id/throttle"
        app:layout_constraintStart_toStartOf="@id/airspeed"
        app:layout_constraintEnd_toEndOf="@id/airspeed"/>
    <TextView
        android:id="@+id/label_altimeter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/altitude"
        app:layout_constraintTop_toBottomOf="@id/altimeter"
        app:layout_constraintBottom_toTopOf="@id/throttle"
        app:layout_constraintStart_toStartOf="@id/altimeter"
        app:layout_constraintEnd_toEndOf="@id/altimeter"/>
    <TextView
        android:id="@+id/label_compass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/compass"
        app:layout_constraintTop_toBottomOf="@id/compass"
        app:layout_constraintBottom_toTopOf="@id/throttle"
        app:layout_constraintStart_toStartOf="@id/compass"
        app:layout_constraintEnd_toEndOf="@id/compass"/>
    <!-- Controls -->
    <TextView
        android:id="@+id/label_throttle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throttle"
        app:layout_constraintTop_toTopOf="@id/throttle"
        app:layout_constraintBottom_toBottomOf="@id/throttle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/throttle"/>
    <SeekBar
        android:id="@+id/throttle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_airspeed"
        app:layout_constraintBottom_toTopOf="@id/altitude"
        app:layout_constraintStart_toEndOf="@id/label_throttle"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="10"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete"/>
    <TextView
        android:id="@+id/label_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude"
        app:layout_constraintTop_toTopOf="@id/altitude"
        app:layout_constraintBottom_toBottomOf="@id/altitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/altitude"/>
    <SeekBar
        android:id="@+id/altitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/throttle"
        app:layout_constraintBottom_toTopOf="@id/engines"
        app:layout_constraintStart_toEndOf="@id/label_throttle"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="10"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete"/>
    <!-- Switches -->
    <TextView
        android:id="@+id/label_engines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engines"
        app:layout_constraintTop_toTopOf="@id/engines"
        app:layout_constraintBottom_toBottomOf="@id/engines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/engines"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <Switch
        android:id="@+id/engines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/altitude"
        app:layout_constraintBottom_toTopOf="@id/landing_gear"
        app:layout_constraintStart_toEndOf="@id/label_engines"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_landing_gear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_gear"
        app:layout_constraintTop_toTopOf="@id/landing_gear"
        app:layout_constraintBottom_toBottomOf="@id/landing_gear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/landing_gear"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <Switch
        android:id="@+id/landing_gear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/engines"
        app:layout_constraintStart_toEndOf="@id/label_landing_gear"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        app:layout_constraintTop_toBottomOf="@id/landing_gear"
        app:layout_constraintBottom_toTopOf="@id/eject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/eject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eject"
        app:layout_constraintTop_toBottomOf="@id/roll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>