<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="update" type="com.chzheng.airmen.memos.UpdateMemo"/>
    </data>
    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.chzheng.airmen.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/label_coordinates"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"/>
        <TextView
            android:id="@+id/label_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/coordinates"
            app:layout_constraintTop_toBottomOf="@id/map"
            app:layout_constraintBottom_toTopOf="@id/label_latitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/label_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            app:layout_constraintTop_toBottomOf="@id/label_coordinates"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/indicator_latitude"/>
        <TextView
            android:id="@+id/indicator_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{String.format("%.3f", update.latitude), default=0}'
            app:layout_constraintTop_toBottomOf="@id/label_coordinates"
            app:layout_constraintStart_toEndOf="@id/label_latitude"
            app:layout_constraintEnd_toStartOf="@id/label_longitude"/>
        <TextView
            android:id="@+id/label_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            app:layout_constraintTop_toBottomOf="@id/label_coordinates"
            app:layout_constraintStart_toEndOf="@id/indicator_latitude"
            app:layout_constraintEnd_toStartOf="@id/indicator_longitude"/>
        <TextView
            android:id="@+id/indicator_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{String.format("%.3f", update.longitude), default=0}'
            app:layout_constraintTop_toBottomOf="@id/label_coordinates"
            app:layout_constraintStart_toEndOf="@id/label_longitude"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/label_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elevation"
            app:layout_constraintTop_toBottomOf="@id/label_latitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/indicator_elevation"/>
        <TextView
            android:id="@+id/indicator_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(update.elevation), default=0}"
            app:layout_constraintTop_toBottomOf="@id/label_latitude"
            app:layout_constraintStart_toEndOf="@id/label_elevation"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>
